feat: only array entries for parser